--- a/bank-manager-api/package.json
+++ b/bank-manager-api/package.json
@@ -6,11 +6,12 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "chalk": "^5.0.0",
+    "chalk": "^4.1.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mariadb": "^2.5.5",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
     "pug": "2.0.0-beta11",
