--- a/bank-manager-client/package.json
+++ b/bank-manager-client/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "apexcharts": "^3.32.0",
     "bootstrap": "^5.1.3",
+    "ng-apexcharts": "^1.6.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "xng-breadcrumb": "^6.8.2",
